# auditai

./: README.md  pyproject.toml
auditai/: __init__.py  __main__.py  dashboard.py  langchain_callback.py  logger.py  proxy.py  report.py  risk.py  wrapper.py
docs/blog/: eu-ai-act-annex-iv-template.html
examples/: quickstart.py
tests/: test_core.py
